added new files

--- a/tmux.conf
+++ b/tmux.conf
@@ -133,7 +133,8 @@ set -g @plugin 'tmux-plugins/tmux-logging'
 
 run -b '~/.dotfiles/tmux/tpm/tpm'
 
-source "/usr/share/tmux/powerline.conf"
+set-hook -g session-created 'run-shell "~/.dotfiles/tmux-powerline/powerline.sh init"' # prettifies the window-status segments
+# source "/usr/share/tmux/powerline.conf"
 
 bind-key -n M-1 select-window -t 1
 bind-key -n M-2 select-window -t 2
