--- a/tmux.conf
+++ b/tmux.conf
@@ -147,3 +147,5 @@ bind-key -n M-8 select-window -t 8
 bind-key -n M-9 select-window -t 9
 
 set -g status-left '#(curl "wttr.in/?format=3") '
+set-option -g default-shell /bin/zsh
+
