--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -3,10 +3,10 @@ import:
 
 font:
   normal:
-    family: FiraCode Nerd Font Mono
+    family: FiraCode Nerd Font
     style:  Retina
   bold:
-    family: FiraCode Nerd Font Mono
+    family: FiraCode Nerd Font
     style:  Bold
   italic:
     family: FiraCode Nerd Font
@@ -16,7 +16,4 @@ font:
     style: BoldItalic
   size: 12
 
-
-shell:
-  program: /usr/bin/zsh
 
