--- a/tmux.conf
+++ b/tmux.conf
@@ -132,9 +132,8 @@ set -g @plugin 'tmux-plugins/tmux-logging'
 # set -g @plugin "arcticicestudio/nord-tmux"
 
 run -b '~/.dotfiles/tmux/tpm/tpm'
-
-set-hook -g session-created 'run-shell "~/.dotfiles/tmux-powerline/powerline.sh init"' # prettifies the window-status segments
-# source "/usr/share/tmux/powerline.conf"
+# set-hook -g session-created 'run-shell "~/.dotfiles/tmux-powerline/powerline.sh init"' # prettifies the window-status segments
+source "/usr/share/tmux/powerline.conf"
 
 bind-key -n M-1 select-window -t 1
 bind-key -n M-2 select-window -t 2
@@ -147,5 +146,5 @@ bind-key -n M-8 select-window -t 8
 bind-key -n M-9 select-window -t 9
 
 set -g status-left '#(curl "wttr.in/?format=3") '
-set-option -g default-shell /bin/zsh
+# set-option -g default-shell /bin/zsh
 
